--- a/css/style.css
+++ b/css/style.css
@@ -217,7 +217,7 @@ fill: var(--color-second-text);
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url(../image/Img.png);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../image/Img.png);
     max-width: 1600px;
     background-repeat: no-repeat;
     height: 600px;
